--- a/directors/david-quinn/index.html
+++ b/directors/david-quinn/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a data-underline="1" class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a data-underline="1" class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">David Quinn</h1>
-						<p>Quinn grew up in advertising and his innate understanding of the business is part of what makes him such a collaborative and amazing partner. His work is filled with heart, artistry and a little magic. There’s a sincerity baked into the tone of what Quinn does that elevates the emotional impact of his projects. Quinn knows how to make you laugh, make you cry or get you to buy.</p>
+						<p>Quinn&#39;s 15 years of experience in the ad industry has given him a firm understanding of the business, from the perspective of both client and agency, and it’s why he insists on a collaborative process. Emotive storytelling, filled with heart and artistry is what best defines his output. There’s a sincerity baked into the tone of Quinn’s work. Whether he’s setting out to make you laugh, cry or buy - you’re going to feel it.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -105,6 +105,17 @@
 				</figcaption>
 			</figure>
 		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/CT-DC-NO-VO.mp4?mrss=true', 'Candian Tire', 'Blender Blender');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_CT-DC-NO-VO.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Candian Tire</h3>
+					<p class="director-portfolio-work-item-caption-text">Blender Blender</p>
+				</figcaption>
+			</figure>
+		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/CPP---Grease-Lightning-DC.mp4?mrss=true', 'CPP', 'Grease Lightning');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-CPP-Thumb---6.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -138,25 +149,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Glad-DC-Final1.mp4?mrss=true', 'Glad', 'Glad for Change');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1690573039.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Skate-Bait-FULL-TRAILER-final.mp4?mrss=true', 'Skate Bait Trailer', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755885070.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Glad</h3>
-					<p class="director-portfolio-work-item-caption-text">Glad for Change</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/NewHorizons_ThisIs_CareAndIndependence_Paul_DIRCUT-v.mp4?mrss=true', 'New Horizons', 'This Is Care And Independence - Paul');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-11-01-at-14106-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">New Horizons</h3>
-					<p class="director-portfolio-work-item-caption-text">This Is Care And Independence - Paul</p>
+					<h3 class="director-portfolio-work-item-caption-title">Skate Bait Trailer</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -435,7 +435,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +557,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +570,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/NewHorizons_ThisIs_Cargiving_Marissa_DIRCUT_SOUND-BOOST_mov.mp4?mrss=true', 'New Horizons', 'This Is Caregiving - Marissa'],['http://skinandbonesfilm.gosimian.com/assets/videos/VALVOLINE-DC-FINAL.mp4?mrss=true', 'Valvoline', 'Oil Change-xi-ety'],['http://skinandbonesfilm.gosimian.com/assets/videos/JON-ANIK---S-PITCH-IDEA-FOR-TOYO-TIRES-_-UFC.mp4?mrss=true', 'Toyo Tires', 'Jon Anik\'s Pitch Idea'],['http://skinandbonesfilm.gosimian.com/assets/videos/CPP---Grease-Lightning-DC.mp4?mrss=true', 'CPP', 'Grease Lightning'],['http://skinandbonesfilm.gosimian.com/assets/videos/Interac---Moustache-15-DC.mp4?mrss=true', 'Interac ', 'Moustache'],['http://skinandbonesfilm.gosimian.com/assets/videos/Kijiji-DC.mp4?mrss=true', 'Kijiji', 'Shake On It'],['http://skinandbonesfilm.gosimian.com/assets/videos/Glad-DC-Final1.mp4?mrss=true', 'Glad', 'Glad for Change'],['http://skinandbonesfilm.gosimian.com/assets/videos/NewHorizons_ThisIs_CareAndIndependence_Paul_DIRCUT-v.mp4?mrss=true', 'New Horizons', 'This Is Care And Independence - Paul'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/NewHorizons_ThisIs_Cargiving_Marissa_DIRCUT_SOUND-BOOST_mov.mp4?mrss=true', 'New Horizons', 'This Is Caregiving - Marissa'],['http://skinandbonesfilm.gosimian.com/assets/videos/VALVOLINE-DC-FINAL.mp4?mrss=true', 'Valvoline', 'Oil Change-xi-ety'],['http://skinandbonesfilm.gosimian.com/assets/videos/JON-ANIK---S-PITCH-IDEA-FOR-TOYO-TIRES-_-UFC.mp4?mrss=true', 'Toyo Tires', 'Jon Anik\'s Pitch Idea'],['http://skinandbonesfilm.gosimian.com/assets/videos/CT-DC-NO-VO.mp4?mrss=true', 'Candian Tire', 'Blender Blender'],['http://skinandbonesfilm.gosimian.com/assets/videos/CPP---Grease-Lightning-DC.mp4?mrss=true', 'CPP', 'Grease Lightning'],['http://skinandbonesfilm.gosimian.com/assets/videos/Interac---Moustache-15-DC.mp4?mrss=true', 'Interac ', 'Moustache'],['http://skinandbonesfilm.gosimian.com/assets/videos/Kijiji-DC.mp4?mrss=true', 'Kijiji', 'Shake On It'],['https://skinandbonesfilm.gosimian.com/assets/videos/Skate-Bait-FULL-TRAILER-final.mp4?mrss=true', 'Skate Bait Trailer', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
