--- a/directors/dugan-gundelfinger/index.html
+++ b/directors/dugan-gundelfinger/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Dugan Gundelfinger</h1>
-						<p>Dugan Gundelfinger is an award-winning writer/director, occasional actor &amp; musician. Californian all the way down to the accent, Dugan is connected to the universe. His father was a rock and roll photographer, his mother a contemporary dancer and his grandfather an accomplished cartoonist. Creativity runs deep in his genes. At one point was attached to direct the official Vanilla Ice Biopic. Dugan currently resides in the Ojai Valley with his two daughters and many psychedelic cacti.</p>
+						<p>Dugan Gundelfinger is not your conventional director. Fresh off the release of his award-winning short, <em>Heroic Dose</em> (to much internet-acclaim, BTW) <em>,</em> he also just dropped a full-length album of psychedelic-dadcore entitled ‘infinity casual’. Right. His comedic sensibilities lend themselves to a tone that’s consistently warm, friendly and outlandish. And he’s used these sensibilities to helm campaigns for Bud Light, Hims, and Dominos. Oh, and also, his work has been recognized at the Grammy Awards and The Clios.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -72,6 +72,39 @@
 
 					<section class="director-portfolio-work">
 						
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54321-PM.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Coors</h3>
+					<p class="director-portfolio-work-item-caption-text">Not Going into The Game</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54053-PM.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Farmer's Insurance</h3>
+					<p class="director-portfolio-work-item-caption-text">Knight</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54150-PM.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Bud Light</h3>
+					<p class="director-portfolio-work-item-caption-text">Smoke Show</p>
+				</figcaption>
+			</figure>
+		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Bud-Light-Grunts-15.mp4?mrss=true', 'Bud Light', 'Grunts');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1727214382.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -91,72 +124,6 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Dominos</h3>
 					<p class="director-portfolio-work-item-caption-text">You Tip We Tip</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54053-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Farmer's Insurance</h3>
-					<p class="director-portfolio-work-item-caption-text">Knight</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Planters-Talker-DC-30.mp4?mrss=true', 'Planters', ' Cashew Talker');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1727214083.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Planters</h3>
-					<p class="director-portfolio-work-item-caption-text"> Cashew Talker</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54150-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Bud Light</h3>
-					<p class="director-portfolio-work-item-caption-text">Smoke Show</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Hims-Getting-Help-DC-30.mp4?mrss=true', 'Hims', 'Getting Help');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1726772630.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Hims</h3>
-					<p class="director-portfolio-work-item-caption-text">Getting Help</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Silk-Home-Gym-15.mp4?mrss=true', 'Silk', 'Home Gym');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1734359377.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Silk</h3>
-					<p class="director-portfolio-work-item-caption-text">Home Gym</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54321-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Coors</h3>
-					<p class="director-portfolio-work-item-caption-text">Not Going into The Game</p>
 				</figcaption>
 			</figure>
 		
@@ -446,7 +413,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -568,7 +535,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -581,7 +548,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Bud-Light-Grunts-15.mp4?mrss=true', 'Bud Light', 'Grunts'],['http://skinandbonesfilm.gosimian.com/assets/videos/Dominos-You-Tip-We-Tip-DC-60.mp4?mrss=true', 'Dominos', 'You Tip We Tip'],['http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Planters-Talker-DC-30.mp4?mrss=true', 'Planters', ' Cashew Talker'],['http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show'],['http://skinandbonesfilm.gosimian.com/assets/videos/Hims-Getting-Help-DC-30.mp4?mrss=true', 'Hims', 'Getting Help'],['http://skinandbonesfilm.gosimian.com/assets/videos/Silk-Home-Gym-15.mp4?mrss=true', 'Silk', 'Home Gym'],['http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game'],['http://skinandbonesfilm.gosimian.com/assets/videos/EARGO-Country-Weekend.mp4?mrss=true', 'EARGO', 'Overheard'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game'],['http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bud-Light-Grunts-15.mp4?mrss=true', 'Bud Light', 'Grunts'],['http://skinandbonesfilm.gosimian.com/assets/videos/Dominos-You-Tip-We-Tip-DC-60.mp4?mrss=true', 'Dominos', 'You Tip We Tip'],['http://skinandbonesfilm.gosimian.com/assets/videos/EARGO-Country-Weekend.mp4?mrss=true', 'EARGO', 'Overheard'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
