--- a/directors/isaac-ravishankara/index.html
+++ b/directors/isaac-ravishankara/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Isaac Ravishankara</h1>
-						<p>Iassc Ravishankara views the world through a lens of discovery, which makes sense for the child of a scientist and a doctor. His degree in physics speaks to his pursuit of universal truths, but also his search for new ideas, new people and new stories. A deep believer that art can be a force that drives society forward, Isaac co-founded OMG Everywhere. OMG Everywhere is a non-profit that provides free film and music workshops for kids in LA, NY, Oakland and London. How great is that?</p>
+						<p>Isaacc Ravishankara is a technically sound filmmaker. His work is methodical, and painstakingly detailed. His use of camera language, blocking and choreography are tools he’s sharpened with films for Finneas, Samsung and LA Tourism. A deep believer that art can be a force that drives society forward, Isaac co-founded OMG Everywhere, a non-profit that provides free film and music workshops for kids in LA, NY, Oakland and London.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -116,24 +116,24 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/VIKOS_COLA_Client_1.mp4?mrss=true', 'Bikos', 'Cola');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/VIKOS_COLA_Client_1.mp4?mrss=true', 'Bikos \'Cola\' (60)', '');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1678206949.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Bikos</h3>
-					<p class="director-portfolio-work-item-caption-text">Cola</p>
+					<h3 class="director-portfolio-work-item-caption-title">Bikos 'Cola' (60)</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/OnePlus---Director-Cut1.mp4?mrss=true', 'One Plus', '');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/OnePlus---Director-Cut1.mp4?mrss=true', 'One Plus DC', '');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1644861268.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">One Plus</h3>
+					<h3 class="director-portfolio-work-item-caption-title">One Plus DC</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
@@ -424,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -546,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -559,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Volunteers-of-America--The-War-Inside-.mp4?mrss=true', 'Volunteers of America', 'The War Inside'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bell-Samsung--Dance-Battle--DC1.mp4?mrss=true', 'Bell Samsung', 'Dance Battle'],['http://skinandbonesfilm.gosimian.com/assets/videos/LA-Tourism.mp4?mrss=true', 'LA Tourism', 'Comeback'],['http://skinandbonesfilm.gosimian.com/assets/videos/FINNEAS_CLEATS_CUTDOWN002.mp4?mrss=true', 'FINNEAS', 'Cleats Teaser'],['http://skinandbonesfilm.gosimian.com/assets/videos/VIKOS_COLA_Client_1.mp4?mrss=true', 'Bikos', 'Cola'],['https://skinandbonesfilm.gosimian.com/assets/videos/OnePlus---Director-Cut1.mp4?mrss=true', 'One Plus', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/jockey__feeling_good--540p-.mp4?mrss=true', 'Jockey', 'Feeling Good'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Volunteers-of-America--The-War-Inside-.mp4?mrss=true', 'Volunteers of America', 'The War Inside'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bell-Samsung--Dance-Battle--DC1.mp4?mrss=true', 'Bell Samsung', 'Dance Battle'],['http://skinandbonesfilm.gosimian.com/assets/videos/LA-Tourism.mp4?mrss=true', 'LA Tourism', 'Comeback'],['http://skinandbonesfilm.gosimian.com/assets/videos/FINNEAS_CLEATS_CUTDOWN002.mp4?mrss=true', 'FINNEAS', 'Cleats Teaser'],['https://skinandbonesfilm.gosimian.com/assets/videos/VIKOS_COLA_Client_1.mp4?mrss=true', 'Bikos \'Cola\' (60)', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/OnePlus---Director-Cut1.mp4?mrss=true', 'One Plus DC', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/jockey__feeling_good--540p-.mp4?mrss=true', 'Jockey', 'Feeling Good'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
