--- a/directors/jackie-abraham/index.html
+++ b/directors/jackie-abraham/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Jackie Abraham</h1>
-						<p>Starting out as a writer in the creative department armed Jackie’s with an inside perspective on directing commercial work. A writer by discipline he immediately understands his projects in a different way than other directors with a combination of smart, strategic thinking and dumb, funny thinking. He knows how to balance work that works hard and great work that puts smiles on faces. You won’t find a genuine, more passionate director ready to do great things than Jackie Abraham.</p>
+						<p>Jackie started out as a writer working in the creative department - the experience armed him with an inside perspective on directing commercial work. His background informs his understanding of dialogue, pace and performance, and results in work that is irreverent and offbeat. Jackie strives for a visual approach that balances colourful imagery, with dialogue-driven comedy. (If, of course, the agency can afford sound.)</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -72,6 +72,17 @@
 
 					<section class="director-portfolio-work">
 						
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Ruffles_ChipLicker_16x9_DC_mov.mp4?mrss=true', 'Ruffles', 'ChipLicker');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1750692932.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Ruffles</h3>
+					<p class="director-portfolio-work-item-caption-text">ChipLicker</p>
+				</figcaption>
+			</figure>
+		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/purgum_kickaspartame_230039_HD_20231124_1.mp4?mrss=true', 'PUR Gum', '');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1712603245.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -94,14 +105,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/EARTH-RATED-BAG-BS.mp4?mrss=true', 'Earth Rated', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screen-Shot-2024-01-15-at-100105-AM.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Coors-Light--Beer-Bows-.mp4?mrss=true', 'Coors Light', 'Beer Bows');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1733601824.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Earth Rated</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
+					<h3 class="director-portfolio-work-item-caption-title">Coors Light</h3>
+					<p class="director-portfolio-work-item-caption-text">Beer Bows</p>
 				</figcaption>
 			</figure>
 		
@@ -113,17 +124,6 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Popeyes</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Coors-Light--Beer-Bows-.mp4?mrss=true', 'Coors Light', 'Beer Bows');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1733601824.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Coors Light</h3>
-					<p class="director-portfolio-work-item-caption-text">Beer Bows</p>
 				</figcaption>
 			</figure>
 		
@@ -435,7 +435,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +557,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +570,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/purgum_kickaspartame_230039_HD_20231124_1.mp4?mrss=true', 'PUR Gum', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Marketing-Awards--Wall-of-Decks-1_mov.mp4?mrss=true', 'Marketing Awards', 'Wall of Decks'],['https://skinandbonesfilm.gosimian.com/assets/videos/EARTH-RATED-BAG-BS.mp4?mrss=true', 'Earth Rated', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/BLKPopeyesCAN_MarchLTO_Garlic_Chicken_Sandwich_Nobody_15_16x9.mp4?mrss=true', 'Popeyes', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Coors-Light--Beer-Bows-.mp4?mrss=true', 'Coors Light', 'Beer Bows'],['https://skinandbonesfilm.gosimian.com/assets/videos/PHO-BS.mp4?mrss=true', 'Pho Tien', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/SOFC-C-BS.mp4?mrss=true', 'The Society Of Fancy Couches', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/NINE-TO-FIVE--1995_mov.mp4?mrss=true', 'NINE TO FIVE, 1995', ''],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Ruffles_ChipLicker_16x9_DC_mov.mp4?mrss=true', 'Ruffles', 'ChipLicker'],['https://skinandbonesfilm.gosimian.com/assets/videos/purgum_kickaspartame_230039_HD_20231124_1.mp4?mrss=true', 'PUR Gum', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Marketing-Awards--Wall-of-Decks-1_mov.mp4?mrss=true', 'Marketing Awards', 'Wall of Decks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Coors-Light--Beer-Bows-.mp4?mrss=true', 'Coors Light', 'Beer Bows'],['https://skinandbonesfilm.gosimian.com/assets/videos/BLKPopeyesCAN_MarchLTO_Garlic_Chicken_Sandwich_Nobody_15_16x9.mp4?mrss=true', 'Popeyes', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/PHO-BS.mp4?mrss=true', 'Pho Tien', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/SOFC-C-BS.mp4?mrss=true', 'The Society Of Fancy Couches', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/NINE-TO-FIVE--1995_mov.mp4?mrss=true', 'NINE TO FIVE, 1995', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
