--- a/directors/kate-hollowell/index.html
+++ b/directors/kate-hollowell/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Kate Hollowell</h1>
-						<p>Kate is a dancer, musician, actor, photographer and director, sometimes all at once. Her blend of uninhibited style and comedy pushes her work to become an art all its own. Big world’s or small, Kate builds them with craft and care and then populates them with unforgettable characters and great comedic timing. In 2024 her short film ‘Say Hi After You Die&#39; won BEST U.S. SHORT FILM at Sundance in 2024 and SXSW. Go Kate!</p>
+						<p>With appearances at SXSW, Sundance, and Cannes Lions - PLUS front wo-manning a band called Number One Popstar, Kate Hollowell is a true multi-hyphenate. Her extensive body of work displays a signature blend of irreverent, heartfelt comedy, and her approach to conceptual thinking is truly stand- out. (Uhm, her best friend dies and gets reincarnated as a toilet, yeah.) She’s currently slated to direct a feature film with AMBLIN Entertainment, and it will most likely, probably, be good.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -72,14 +72,14 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Panda_Express_Karaoke_DC_mov.mp4?mrss=true', 'Panda Express \'Karaoke\' DC', '');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Panda_Express_Karaoke_DC_mov.mp4?mrss=true', 'Panda Express', 'Karaoke');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1746644599.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Panda Express 'Karaoke' DC</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
+					<h3 class="director-portfolio-work-item-caption-title">Panda Express</h3>
+					<p class="director-portfolio-work-item-caption-text">Karaoke</p>
 				</figcaption>
 			</figure>
 		
@@ -116,14 +116,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Toyota-DC-60-Mix-2.mp4?mrss=true', 'Toyota', 'Keep Marissa Running');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-11-at-105508-AM.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/CarMax-Wanna-Buy-Your-Way.mp4?mrss=true', 'CarMax', 'Wanna Buy Your Way');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_CarMax-Wanna-Buy-Your-Way.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Toyota</h3>
-					<p class="director-portfolio-work-item-caption-text">Keep Marissa Running</p>
+					<h3 class="director-portfolio-work-item-caption-title">CarMax</h3>
+					<p class="director-portfolio-work-item-caption-text">Wanna Buy Your Way</p>
 				</figcaption>
 			</figure>
 		
@@ -424,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -546,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -559,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/Panda_Express_Karaoke_DC_mov.mp4?mrss=true', 'Panda Express \'Karaoke\' DC', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Tecovas-Check-Em-Out-60.mp4?mrss=true', 'Tecovas', 'Check Em Out'],['http://skinandbonesfilm.gosimian.com/assets/videos/FenderBender_30E.mp4?mrss=true', 'Money Mart', 'Fender Bender'],['https://skinandbonesfilm.gosimian.com/assets/videos/45-RITUAL.mp4?mrss=true', 'Ritual', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Toyota-DC-60-Mix-2.mp4?mrss=true', 'Toyota', 'Keep Marissa Running'],['http://skinandbonesfilm.gosimian.com/assets/videos/Tecovas-How-She-Rolls-60.mp4?mrss=true', 'Tecovas', 'How She Rolls'],['https://skinandbonesfilm.gosimian.com/assets/videos/SHAYD-ULTIMATE-TRAILER.mp4?mrss=true', 'Say Hi After You Die', ''],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Panda_Express_Karaoke_DC_mov.mp4?mrss=true', 'Panda Express', 'Karaoke'],['http://skinandbonesfilm.gosimian.com/assets/videos/Tecovas-Check-Em-Out-60.mp4?mrss=true', 'Tecovas', 'Check Em Out'],['http://skinandbonesfilm.gosimian.com/assets/videos/FenderBender_30E.mp4?mrss=true', 'Money Mart', 'Fender Bender'],['https://skinandbonesfilm.gosimian.com/assets/videos/45-RITUAL.mp4?mrss=true', 'Ritual', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/CarMax-Wanna-Buy-Your-Way.mp4?mrss=true', 'CarMax', 'Wanna Buy Your Way'],['http://skinandbonesfilm.gosimian.com/assets/videos/Tecovas-How-She-Rolls-60.mp4?mrss=true', 'Tecovas', 'How She Rolls'],['https://skinandbonesfilm.gosimian.com/assets/videos/SHAYD-ULTIMATE-TRAILER.mp4?mrss=true', 'Say Hi After You Die', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
