--- a/directors/luke-jaden/index.html
+++ b/directors/luke-jaden/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Luke Jaden</h1>
-						<p>Born in the shadows of a quiet Michigan town, Luke Jaden is a writer and director drawn to the electric pulse of human complexity. His work—raw, poetic, and visceral—straddles the line between cinematic meditation and emotional immediacy. From festival runs to global acclaim, Jaden’s stories live where intimacy meets intensity, always reaching for the marrow of what makes us human. His visual language is rich and atmospheric, crafting worlds that breathe honesty and ache with meaning.</p>
+						<p>Luke Jaden is a writer and director drawn to the electric pulse of human complexity. His work—raw, poetic, and visceral—leaves the audience feeling the story long after its cut to black. From festival runs to global acclaim, Jaden’s stories live where intimacy meets intensity, always reaching for the marrow of what makes us human. His visual language is rich and atmospheric, crafting worlds that the audience actually wants to be a part of.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -138,14 +138,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/carhartt_-time-____60--1080p-.mp4?mrss=true', 'Carhartt', 'Time');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/carhartt_-time-____60--1080p-.mp4?mrss=true', 'Carhartt \'Time\' 60', '');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1746739480.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Carhartt</h3>
-					<p class="director-portfolio-work-item-caption-text">Time</p>
+					<h3 class="director-portfolio-work-item-caption-title">Carhartt 'Time' 60</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -424,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -546,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -559,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/ford_-promised_land-____60--2160p-.mp4?mrss=true', 'Ford', 'Promised Land'],['http://skinandbonesfilm.gosimian.com/assets/videos/dove_--thefaceof10---1080p-.mp4?mrss=true', 'Dove', 'The Face of 10'],['http://skinandbonesfilm.gosimian.com/assets/videos/finley____90_vo--2160p-.mp4?mrss=true', 'Subaru', 'Finley'],['http://skinandbonesfilm.gosimian.com/assets/videos/sandy_hook_promise_-back_2_school---1080p-.mp4?mrss=true', 'Sandy Hook Promise', 'Back 2 School'],['http://skinandbonesfilm.gosimian.com/assets/videos/ford_-life_elevated---1080p-.mp4?mrss=true', 'Ford', 'Life Elevated'],['http://skinandbonesfilm.gosimian.com/assets/videos/peta_-mother-s_milk---1440p-.mp4?mrss=true', 'Peta', 'Mother\'s Milk'],['http://skinandbonesfilm.gosimian.com/assets/videos/carhartt_-time-____60--1080p-.mp4?mrss=true', 'Carhartt', 'Time'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/ford_-promised_land-____60--2160p-.mp4?mrss=true', 'Ford', 'Promised Land'],['http://skinandbonesfilm.gosimian.com/assets/videos/dove_--thefaceof10---1080p-.mp4?mrss=true', 'Dove', 'The Face of 10'],['http://skinandbonesfilm.gosimian.com/assets/videos/finley____90_vo--2160p-.mp4?mrss=true', 'Subaru', 'Finley'],['http://skinandbonesfilm.gosimian.com/assets/videos/sandy_hook_promise_-back_2_school---1080p-.mp4?mrss=true', 'Sandy Hook Promise', 'Back 2 School'],['http://skinandbonesfilm.gosimian.com/assets/videos/ford_-life_elevated---1080p-.mp4?mrss=true', 'Ford', 'Life Elevated'],['http://skinandbonesfilm.gosimian.com/assets/videos/peta_-mother-s_milk---1440p-.mp4?mrss=true', 'Peta', 'Mother\'s Milk'],['https://skinandbonesfilm.gosimian.com/assets/videos/carhartt_-time-____60--1080p-.mp4?mrss=true', 'Carhartt \'Time\' 60', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
