--- a/directors/mapp/index.html
+++ b/directors/mapp/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Mapp</h1>
-						<p>Not many directors have won a Grand Prix in Cannes in their past lives as an agency creative, but Steve Mapp has. Over the years Steve has been a few different things, Art Director, Creative Director and now just Director. A vigorously trained and tested creative mind, Steve knows what it takes to make the best work in the world. He’s always honing his craft by tackling a wide variety of projects, all with a cinematic approach.</p>
+						<p>Starting out on the agency side as an Art Director armed Mapp with a strong understanding of the creative department’s process, as well as the methodology behind visual storytelling. He takes a  playful, ‘out of the box’ approach to his comedy. Whether it’s practical in-camera effects or outlandish VFX work, his spots, complemented by cheeky performance and thoughtful casting, make it easy to crack a smile.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -72,36 +72,14 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/driveway_-_happy_place__doe_--1080p-.mp4?mrss=true', 'Driveway', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-DOE1.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Driveway</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/reliant__weather_machine_--1080p-.mp4?mrss=true', 'Reliant', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722372843.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Reliant</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/little_caesars__world-s_greatest_combination_---_no_no_no-___30--1080p-.mp4?mrss=true', 'Little Caesars', '');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/little_caesars__world-s_greatest_combination_---_no_no_no-___30--1080p-.mp4?mrss=true', 'Little Caesars', 'World’s Greatest Combination — No No No!');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722372629.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Little Caesars</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
+					<p class="director-portfolio-work-item-caption-text">World’s Greatest Combination — No No No!</p>
 				</figcaption>
 			</figure>
 		
@@ -116,47 +94,58 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/BLK_lifebridge_health_-__i-m_fine_--1080p-.mp4?mrss=true', 'Lifebridge Health', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-lifebridge1.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/reliant__weather_machine_--1080p-.mp4?mrss=true', 'Reliant', 'Weather Machine');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722372843.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Lifebridge Health</h3>
+					<h3 class="director-portfolio-work-item-caption-title">Reliant</h3>
+					<p class="director-portfolio-work-item-caption-text">Weather Machine</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/driveway_-_happy_place__doe_--1080p-.mp4?mrss=true', 'Driveway', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-DOE1.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Driveway</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/mars_-__ghosting___15--1080p-.mp4?mrss=true', 'Mars', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722373942.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/playstation_vue__phone_--1080p-.mp4?mrss=true', 'Playstation Vue', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1709219029.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Mars</h3>
+					<h3 class="director-portfolio-work-item-caption-title">Playstation Vue</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/_double_up__-_clif_energy_granola--1080p-.mp4?mrss=true', 'CLIF Energy Granola', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722374507.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/_soaking__-_clif_whole_lotta--1080p-1.mp4?mrss=true', 'CLIF Whole Lotta', 'Soaking');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-CLIFbath1.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">CLIF Energy Granola</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
+					<h3 class="director-portfolio-work-item-caption-title">CLIF Whole Lotta</h3>
+					<p class="director-portfolio-work-item-caption-text">Soaking</p>
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/peelz__john_birk__-agency_longform---1080p-.mp4?mrss=true', 'Peelz', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722373010.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/western_canada_lottery_-__the_gift_--1080p-.mp4?mrss=true', 'Western Canada Lottery', 'The Gift');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-09-23-at-125952---PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Peelz</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
+					<h3 class="director-portfolio-work-item-caption-title">Western Canada Lottery</h3>
+					<p class="director-portfolio-work-item-caption-text">The Gift</p>
 				</figcaption>
 			</figure>
 		
@@ -435,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/driveway_-_happy_place__doe_--1080p-.mp4?mrss=true', 'Driveway', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/reliant__weather_machine_--1080p-.mp4?mrss=true', 'Reliant', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/little_caesars__world-s_greatest_combination_---_no_no_no-___30--1080p-.mp4?mrss=true', 'Little Caesars', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/Deliciously_Satisfying_30_16x9_NFA.mp4?mrss=true', 'ALOHA', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/BLK_lifebridge_health_-__i-m_fine_--1080p-.mp4?mrss=true', 'Lifebridge Health', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/mars_-__ghosting___15--1080p-.mp4?mrss=true', 'Mars', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/_double_up__-_clif_energy_granola--1080p-.mp4?mrss=true', 'CLIF Energy Granola', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/peelz__john_birk__-agency_longform---1080p-.mp4?mrss=true', 'Peelz', ''],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/little_caesars__world-s_greatest_combination_---_no_no_no-___30--1080p-.mp4?mrss=true', 'Little Caesars', 'World’s Greatest Combination — No No No!'],['https://skinandbonesfilm.gosimian.com/assets/videos/Deliciously_Satisfying_30_16x9_NFA.mp4?mrss=true', 'ALOHA', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/reliant__weather_machine_--1080p-.mp4?mrss=true', 'Reliant', 'Weather Machine'],['https://skinandbonesfilm.gosimian.com/assets/videos/driveway_-_happy_place__doe_--1080p-.mp4?mrss=true', 'Driveway', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/playstation_vue__phone_--1080p-.mp4?mrss=true', 'Playstation Vue', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/_soaking__-_clif_whole_lotta--1080p-1.mp4?mrss=true', 'CLIF Whole Lotta', 'Soaking'],['http://skinandbonesfilm.gosimian.com/assets/videos/western_canada_lottery_-__the_gift_--1080p-.mp4?mrss=true', 'Western Canada Lottery', 'The Gift'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
