--- a/directors/matt-rhodes/index.html
+++ b/directors/matt-rhodes/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Matt Rhodes</h1>
-						<p>Matt knows how to make you feel things. His love of film comes from watching movies in his father’s video store as a kid growing up. He brings a warmth to his work that draws the viewer deep into the worlds he creates and then the performances he gets from actors does the rest. Clever, emotive and visually arresting film, with the occasional famous face like Gillian Anderson or Kit Harrington. This is all to say there isn’t much Matt can’t do.</p>
+						<p>Matt has a knack for putting the camera in interesting places, and using it to make the audience feel things. He tackles his subject matter, from the lighthearted to the marginalized, with a sensitivity that he executes with class and character. His work can be warm, informative and provocative. Sometimes all at once. (That’s called versatility BTW.)</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -91,6 +91,17 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Ciao</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Eastenders_TheMotherofallReunions.mp4?mrss=true', 'EastEnders', 'The Mother of all Reunions');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755873386.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">EastEnders</h3>
+					<p class="director-portfolio-work-item-caption-text">The Mother of all Reunions</p>
 				</figcaption>
 			</figure>
 		
@@ -135,17 +146,6 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Canadian Tire Tested</h3>
 					<p class="director-portfolio-work-item-caption-text">Cake Pan</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/bbc_eastenders_trail__-_sharon-s_back--720p-.mp4?mrss=true', 'BBC Eastenders', 'Storm');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1716826602.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">BBC Eastenders</h3>
-					<p class="director-portfolio-work-item-caption-text">Storm</p>
 				</figcaption>
 			</figure>
 		
@@ -435,7 +435,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +557,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +570,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/EXPRESS-40D.mp4?mrss=true', 'Transpennine Express', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/ciao--Original-.mp4?mrss=true', 'Ciao', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/b--1080p-.mp4?mrss=true', 'Bepathen', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/wimbledon--1080p-.mp4?mrss=true', 'Wimbledon', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/ColesBackendFade_vanish___matt_rhodes--720p-.mp4?mrss=true', 'Love for Longer', 'Vanish'],['http://skinandbonesfilm.gosimian.com/assets/videos/ColesBackendCut_ct_cakeDC--1080p-.mp4?mrss=true', 'Canadian Tire Tested', 'Cake Pan'],['http://skinandbonesfilm.gosimian.com/assets/videos/bbc_eastenders_trail__-_sharon-s_back--720p-.mp4?mrss=true', 'BBC Eastenders', 'Storm'],['https://skinandbonesfilm.gosimian.com/assets/videos/child_soldier_-_d-ad_winner_2021--1080p-.mp4?mrss=true', 'Child Soldier', ''],];
+				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/EXPRESS-40D.mp4?mrss=true', 'Transpennine Express', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/ciao--Original-.mp4?mrss=true', 'Ciao', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Eastenders_TheMotherofallReunions.mp4?mrss=true', 'EastEnders', 'The Mother of all Reunions'],['https://skinandbonesfilm.gosimian.com/assets/videos/b--1080p-.mp4?mrss=true', 'Bepathen', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/wimbledon--1080p-.mp4?mrss=true', 'Wimbledon', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/ColesBackendFade_vanish___matt_rhodes--720p-.mp4?mrss=true', 'Love for Longer', 'Vanish'],['http://skinandbonesfilm.gosimian.com/assets/videos/ColesBackendCut_ct_cakeDC--1080p-.mp4?mrss=true', 'Canadian Tire Tested', 'Cake Pan'],['https://skinandbonesfilm.gosimian.com/assets/videos/child_soldier_-_d-ad_winner_2021--1080p-.mp4?mrss=true', 'Child Soldier', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
