--- a/directors/matthew-swanson/index.html
+++ b/directors/matthew-swanson/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Matthew Swanson</h1>
-						<p>You know when you’re watching a Matthew Swanson spot because your eyes start to open a little wider. A signature visual style, combined with pitch-perfect casting and impeccable comedic timing sums up the Matthew Swanson trifecta. When 9 out of 10 people see it one way, he’ll be the one who sees it another. He brings his unique sensibility to everything he does, and his work is all the better for it.</p>
+						<p>Swanson is funny. He is one of the comedy directors that has a visual approach, yes, scenes are lit. Equally important, he veers away from the low-hanging fruit, opting for humour that’s unexpected and also insightful. Whether it’s a Llama spitting at a bank teller, or a delivery guy sitting in his car until the song finishes, he understands human behaviour. And it’s prevalent in every story he tells.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -83,14 +83,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Mattress-Firm-Socks-DC_mov.mp4?mrss=true', 'Mattress Firm', 'Socks');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Mattress-Firm-Socks-DC_mov.mp4?mrss=true', 'Mattress Firm \'Socks\' DC', '');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1719439038.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Mattress Firm</h3>
-					<p class="director-portfolio-work-item-caption-text">Socks</p>
+					<h3 class="director-portfolio-work-item-caption-title">Mattress Firm 'Socks' DC</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -446,7 +446,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -568,7 +568,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -581,7 +581,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Spotify--Let-the-Song-Play-.mp4?mrss=true', 'Spotify', 'Let the Song Play'],['http://skinandbonesfilm.gosimian.com/assets/videos/Mattress-Firm-Socks-DC_mov.mp4?mrss=true', 'Mattress Firm', 'Socks'],['http://skinandbonesfilm.gosimian.com/assets/videos/HACKS_DC_V4_4x3_mov.mp4?mrss=true', 'Current', 'Hacks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Trainline-New-Realisations-Film-16x9-Vimeo-4K_mov.mp4?mrss=true', 'Trainline', 'Realisations'],['http://skinandbonesfilm.gosimian.com/assets/videos/Wealthsimple--Alive--55-DC.mp4?mrss=true', 'Wealthsimple', 'Alive'],['http://skinandbonesfilm.gosimian.com/assets/videos/Trainline-New-Friendships-Film-16x9-Vimeo-4K_mov.mp4?mrss=true', 'Trainline', 'Friendships'],['http://skinandbonesfilm.gosimian.com/assets/videos/Zillow--Ride--DC.mp4?mrss=true', 'Zillow', 'Ride'],['http://skinandbonesfilm.gosimian.com/assets/videos/Radio-Shack---Laundry-Cat.mp4?mrss=true', 'Radio Shack', 'Laundry Cat'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bosch_AeroTwins_Lama_80s_v011_191023_11.mp4?mrss=true', 'Bosch', 'Aero Twins'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Spotify--Let-the-Song-Play-.mp4?mrss=true', 'Spotify', 'Let the Song Play'],['https://skinandbonesfilm.gosimian.com/assets/videos/Mattress-Firm-Socks-DC_mov.mp4?mrss=true', 'Mattress Firm \'Socks\' DC', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/HACKS_DC_V4_4x3_mov.mp4?mrss=true', 'Current', 'Hacks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Trainline-New-Realisations-Film-16x9-Vimeo-4K_mov.mp4?mrss=true', 'Trainline', 'Realisations'],['http://skinandbonesfilm.gosimian.com/assets/videos/Wealthsimple--Alive--55-DC.mp4?mrss=true', 'Wealthsimple', 'Alive'],['http://skinandbonesfilm.gosimian.com/assets/videos/Trainline-New-Friendships-Film-16x9-Vimeo-4K_mov.mp4?mrss=true', 'Trainline', 'Friendships'],['http://skinandbonesfilm.gosimian.com/assets/videos/Zillow--Ride--DC.mp4?mrss=true', 'Zillow', 'Ride'],['http://skinandbonesfilm.gosimian.com/assets/videos/Radio-Shack---Laundry-Cat.mp4?mrss=true', 'Radio Shack', 'Laundry Cat'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bosch_AeroTwins_Lama_80s_v011_191023_11.mp4?mrss=true', 'Bosch', 'Aero Twins'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
