--- a/directors/nolan-sarner/index.html
+++ b/directors/nolan-sarner/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,13 +58,13 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Nolan Sarner</h1>
-						<p>Nolan can make just about any story a beautiful story. The lead character could be a little kid or a big name, but Nolan’s ability to get authentic performances is always consistent. Paired with beautiful cinematography and a naturally fluid pace, his work feels like real-life even when it’s not.</p>
+						<p>Sarner has the ability to capture everyday life with an elevated perspective. In other words, it feels like you’ve seen it before, but it looks beautiful. Whether it’s a first-time performer, or a seasoned celebrity talent, he mines authentic performances out of his talent. Nuanced and heartfelt, his work leaves a lasting impression - the mark of an emotive storyteller..</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 					<h2 class="director-portfolio-info-awards-title">Awards</h2>
 					<ul class="director-portfolio-info-awards-list">
-						<li>Canadian Screen Award Winner, 2018</li><li>Canadian Screen Award Nominee, 2019</li><li>ADCC, Shortlist, 2024</li><li>1.4, Shortlist, 2021 & 2022</li><li>Berlin Commercial Awards, Shortlist, 2021 & 2022</li><li>Vimeo, Staff Pick</li>
+						<li>Canadian Screen Award Winner, 2018</li><li>Canadian Screen Award Nominee, 2019</li><li>ADCC, Shortlist, 2024</li><li>1.4, Shortlist, 2021 & 2022</li><li>Berlin Commercial Awards, Shortlist, 2021 & 2022</li><li>Vimeo, Staff Pick</li><li>1.4 Shortlist, 2025</li><li>YDA Shortlist, 2025 - Results Still Pending</li>
 					</ul>
 				</div>
 			
@@ -72,14 +72,14 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Intact_60s_ENG_Mix-Approved-Crea.mp4?mrss=true', 'Intact', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1714511968.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/RBC_NEWCOMERS_75_DC_mov.mp4?mrss=true', 'RBC', 'Newcomers');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-03-04-at-22612-PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Intact</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
+					<h3 class="director-portfolio-work-item-caption-title">RBC</h3>
+					<p class="director-portfolio-work-item-caption-text">Newcomers</p>
 				</figcaption>
 			</figure>
 		
@@ -94,8 +94,19 @@
 				</figcaption>
 			</figure>
 		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/McValue_DC.mp4?mrss=true', 'McValue', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755888972.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">McValue</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
+				</figcaption>
+			</figure>
+		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/McDonald-s--From-The-Ground-Up-1.mp4?mrss=true', 'McDonald\'s', 'From the Ground Up');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1728414125.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755885592.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -105,69 +116,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/RBC_NEWCOMERS_75_DC_mov.mp4?mrss=true', 'RBC', 'Newcomers');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-03-04-at-22612-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">RBC</h3>
-					<p class="director-portfolio-work-item-caption-text">Newcomers</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/McValue_StudentLunch_DC.mp4?mrss=true', 'McValue', 'Study Break');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1738265078.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">McValue</h3>
-					<p class="director-portfolio-work-item-caption-text">Study Break</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Intact_Insurance_DC_WEB.mp4?mrss=true', 'Intact', 'Ride to Remember');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-27-at-30246-PM.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Intact_83s_ENG_DirCut_WithVO_Repiquage_240426_H264mp4.mp4?mrss=true', 'Intact', 'For Everything You Care About');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1714422551.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Intact</h3>
-					<p class="director-portfolio-work-item-caption-text">Ride to Remember</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/McDonalds--McDelivery-Loves---------------.mp4?mrss=true', 'McDonald\'s', 'McDelivery Loves');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1713807370.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">McDonald's</h3>
-					<p class="director-portfolio-work-item-caption-text">McDelivery Loves</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/McValue_StepBack_DC.mp4?mrss=true', 'McValue', 'Step Back');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1738088695.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">McValue</h3>
-					<p class="director-portfolio-work-item-caption-text">Step Back</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Nature-Valley----Anthem1.mp4?mrss=true', 'Nature Valley', 'Anthem');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1713807812.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Nature Valley</h3>
-					<p class="director-portfolio-work-item-caption-text">Anthem</p>
+					<p class="director-portfolio-work-item-caption-text">For Everything You Care About</p>
 				</figcaption>
 			</figure>
 		
@@ -189,7 +145,7 @@
 				<div class="director-portfolio-info-awards">
 					<h2 class="director-portfolio-info-awards-title">Awards</h2>
 					<ul class="director-portfolio-info-awards-list">
-					<li>Canadian Screen Award Winner, 2018</li><li>Canadian Screen Award Nominee, 2019</li><li>ADCC, Shortlist, 2024</li><li>1.4, Shortlist, 2021 & 2022</li><li>Berlin Commercial Awards, Shortlist, 2021 & 2022</li><li>Vimeo, Staff Pick</li>
+					<li>Canadian Screen Award Winner, 2018</li><li>Canadian Screen Award Nominee, 2019</li><li>ADCC, Shortlist, 2024</li><li>1.4, Shortlist, 2021 & 2022</li><li>Berlin Commercial Awards, Shortlist, 2021 & 2022</li><li>Vimeo, Staff Pick</li><li>1.4 Shortlist, 2025</li><li>YDA Shortlist, 2025 - Results Still Pending</li>
 					</ul>
 				</div>
 			
@@ -457,7 +413,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -579,7 +535,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -592,7 +548,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/Intact_60s_ENG_Mix-Approved-Crea.mp4?mrss=true', 'Intact', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Canada-Post--Grandpa--DC.mp4?mrss=true', 'Canada Post', 'Grandpa'],['http://skinandbonesfilm.gosimian.com/assets/videos/McDonald-s--From-The-Ground-Up-1.mp4?mrss=true', 'McDonald\'s', 'From the Ground Up'],['http://skinandbonesfilm.gosimian.com/assets/videos/RBC_NEWCOMERS_75_DC_mov.mp4?mrss=true', 'RBC', 'Newcomers'],['http://skinandbonesfilm.gosimian.com/assets/videos/McValue_StudentLunch_DC.mp4?mrss=true', 'McValue', 'Study Break'],['http://skinandbonesfilm.gosimian.com/assets/videos/Intact_Insurance_DC_WEB.mp4?mrss=true', 'Intact', 'Ride to Remember'],['http://skinandbonesfilm.gosimian.com/assets/videos/McDonalds--McDelivery-Loves---------------.mp4?mrss=true', 'McDonald\'s', 'McDelivery Loves'],['http://skinandbonesfilm.gosimian.com/assets/videos/McValue_StepBack_DC.mp4?mrss=true', 'McValue', 'Step Back'],['http://skinandbonesfilm.gosimian.com/assets/videos/Nature-Valley----Anthem1.mp4?mrss=true', 'Nature Valley', 'Anthem'],['https://skinandbonesfilm.gosimian.com/assets/videos/Jack_RC07_4k_Web.mp4?mrss=true', 'My Name is Jack', ''],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/RBC_NEWCOMERS_75_DC_mov.mp4?mrss=true', 'RBC', 'Newcomers'],['http://skinandbonesfilm.gosimian.com/assets/videos/Canada-Post--Grandpa--DC.mp4?mrss=true', 'Canada Post', 'Grandpa'],['https://skinandbonesfilm.gosimian.com/assets/videos/McValue_DC.mp4?mrss=true', 'McValue', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/McDonald-s--From-The-Ground-Up-1.mp4?mrss=true', 'McDonald\'s', 'From the Ground Up'],['http://skinandbonesfilm.gosimian.com/assets/videos/Intact_83s_ENG_DirCut_WithVO_Repiquage_240426_H264mp4.mp4?mrss=true', 'Intact', 'For Everything You Care About'],['https://skinandbonesfilm.gosimian.com/assets/videos/Jack_RC07_4k_Web.mp4?mrss=true', 'My Name is Jack', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
