--- a/directors/rob-fiocca/index.html
+++ b/directors/rob-fiocca/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Rob Fiocca</h1>
-						<p>How can anyone this nice devote so much attention to detail? Rob Fiocca, arguably Canada’s best food director, has an eye for beauty that is unparalleled. He consistently raises the bar for how we shoot food in this country with his mastery of light, texture and motion, not to mention his avant-garde styling choices and quest for surprising new angles. And let’s not even get started on his food plating. (In a word, delightful.)</p>
+						<p>How can anyone this nice devote so much attention to detail? Rob Fiocca, arguably Canada’s best food director, has an eye for beauty that is unparalleled. He consistently raises the bar for how we shoot food in this country. With a firm command on light, texture and motion, he brings an avant-garde approach to the table-top space. His innovative take on styling and camera language, leave the audience satiating not just in the food he’s selling, but the choices he’s making.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -72,17 +72,6 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Schneiders--Bacon--30-.mp4?mrss=true', 'Schneiders', 'Bacon');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1682009826.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Schneiders</h3>
-					<p class="director-portfolio-work-item-caption-text">Bacon</p>
-				</figcaption>
-			</figure>
-		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/PRKB0001000H_NPB_Flavor_Delivered_Pepperoni_EVG_30_mov.mp4?mrss=true', 'Pork', 'Flavour Delivered');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1746646894.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -105,14 +94,36 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/WEBH264-----McDs-Breakfast-Wrap-Layers.mp4?mrss=true', 'McDonalds', 'Breakfast Wrap');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725456584.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Schneiders--Bacon--30-.mp4?mrss=true', 'Schneiders', 'Bacon');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1682009826.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">McDonalds</h3>
-					<p class="director-portfolio-work-item-caption-text">Breakfast Wrap</p>
+					<h3 class="director-portfolio-work-item-caption-title">Schneiders</h3>
+					<p class="director-portfolio-work-item-caption-text">Bacon</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Chicken_Wrap_Launch_Fresh_Thinking_15_web_EN_16x9_mov.mp4?mrss=true', 'Popeye\'s', 'Chicken Wrap - Fresh Thinking');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_Chicken_Wrap_Launch_Fresh_Thinking_15_web_EN_16x9.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Popeye's</h3>
+					<p class="director-portfolio-work-item-caption-text">Chicken Wrap - Fresh Thinking</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/kfc_tangy_takeover___pickle_menu.mp4?mrss=true', 'KFC', 'Tangy Takeover - Pickle Menu');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_kfc_tangy_takeover___pickle_menu.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">KFC</h3>
+					<p class="director-portfolio-work-item-caption-text">Tangy Takeover - Pickle Menu</p>
 				</figcaption>
 			</figure>
 		
@@ -127,36 +138,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Cracker-Barrel---Lasagna.mp4?mrss=true', 'Cracker Barrel Lasagna', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1726680698.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/WEBH264-----McDs-Breakfast-Wrap-Layers.mp4?mrss=true', 'McDonalds', 'Breakfast Wrap');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725456584.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Cracker Barrel Lasagna</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Longhorn--Legendary-Flavors--301.mp4?mrss=true', 'Longhorn', 'Legendary Flavours');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screen-Shot-2022-02-14-at-15557-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Longhorn</h3>
-					<p class="director-portfolio-work-item-caption-text">Legendary Flavours</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Fiocca-Studios-Sizzle.mp4?mrss=true', 'Fiocca Studios', 'Sizzle');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_Fiocca-Studios-Sizzle.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Fiocca Studios</h3>
-					<p class="director-portfolio-work-item-caption-text">Sizzle</p>
+					<h3 class="director-portfolio-work-item-caption-title">McDonalds</h3>
+					<p class="director-portfolio-work-item-caption-text">Breakfast Wrap</p>
 				</figcaption>
 			</figure>
 		
@@ -435,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Schneiders--Bacon--30-.mp4?mrss=true', 'Schneiders', 'Bacon'],['http://skinandbonesfilm.gosimian.com/assets/videos/PRKB0001000H_NPB_Flavor_Delivered_Pepperoni_EVG_30_mov.mp4?mrss=true', 'Pork', 'Flavour Delivered'],['http://skinandbonesfilm.gosimian.com/assets/videos/Cracker-Barrel---Cheese-Board.mp4?mrss=true', 'Cracker Barrel', 'Cheese Board'],['http://skinandbonesfilm.gosimian.com/assets/videos/WEBH264-----McDs-Breakfast-Wrap-Layers.mp4?mrss=true', 'McDonalds', 'Breakfast Wrap'],['http://skinandbonesfilm.gosimian.com/assets/videos/Schneiders---Sausage1.mp4?mrss=true', 'Schneiders', 'Sausage'],['https://skinandbonesfilm.gosimian.com/assets/videos/Cracker-Barrel---Lasagna.mp4?mrss=true', 'Cracker Barrel Lasagna', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Longhorn--Legendary-Flavors--301.mp4?mrss=true', 'Longhorn', 'Legendary Flavours'],['http://skinandbonesfilm.gosimian.com/assets/videos/Fiocca-Studios-Sizzle.mp4?mrss=true', 'Fiocca Studios', 'Sizzle'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/PRKB0001000H_NPB_Flavor_Delivered_Pepperoni_EVG_30_mov.mp4?mrss=true', 'Pork', 'Flavour Delivered'],['http://skinandbonesfilm.gosimian.com/assets/videos/Cracker-Barrel---Cheese-Board.mp4?mrss=true', 'Cracker Barrel', 'Cheese Board'],['http://skinandbonesfilm.gosimian.com/assets/videos/Schneiders--Bacon--30-.mp4?mrss=true', 'Schneiders', 'Bacon'],['http://skinandbonesfilm.gosimian.com/assets/videos/Chicken_Wrap_Launch_Fresh_Thinking_15_web_EN_16x9_mov.mp4?mrss=true', 'Popeye\'s', 'Chicken Wrap - Fresh Thinking'],['http://skinandbonesfilm.gosimian.com/assets/videos/kfc_tangy_takeover___pickle_menu.mp4?mrss=true', 'KFC', 'Tangy Takeover - Pickle Menu'],['http://skinandbonesfilm.gosimian.com/assets/videos/Schneiders---Sausage1.mp4?mrss=true', 'Schneiders', 'Sausage'],['http://skinandbonesfilm.gosimian.com/assets/videos/WEBH264-----McDs-Breakfast-Wrap-Layers.mp4?mrss=true', 'McDonalds', 'Breakfast Wrap'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
