--- a/directors/rodney-lucas/index.html
+++ b/directors/rodney-lucas/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Rodney Lucas</h1>
-						<p>Hailing from the South Side of Chicago and now calling Brooklyn home Rodney, captures real life wherever he goes. As a documentary filmmaker Rodney has traveled the world creating short documentaries and branded content and made a whole lot of friends along the way. He’s known for his high level of sensitivity, care, artistic expression, and emotional depth.</p>
+						<p>Rodney has a filmic aesthetic, and it’s perfect for the types of stories he sets out to tell. It’s gritty, real, and showcases a high level of sensitivity, thought, and emotional depth - a welcome refresh in the ad space. His work for Nike, Under Armour and HULU all bear the touch of his compelling visual signature (grainy imperfections juxtaposed with everyday beauty). His filmwork has also been recognized at Tribeca, the Webby’s and Cannes.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -80,6 +80,28 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Nike</h3>
 					<p class="director-portfolio-work-item-caption-text">Sha'Carri Richardson</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/SP21_CHI_WNBA_DDESHIELDS_060sec_1920x1080_re-deliver.mp4?mrss=true', 'WNBA', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755895577.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">WNBA</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Popeyes--Big-Box-_mov.mp4?mrss=true', 'Popeyes', 'Big Box');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1746715280.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Popeyes</h3>
+					<p class="director-portfolio-work-item-caption-text">Big Box</p>
 				</figcaption>
 			</figure>
 		
@@ -105,13 +127,13 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/MARO_030C-16x9-mix.mp4?mrss=true', 'Under Armour', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725493816.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/RODNEY-US-BANK.mp4?mrss=true', 'US Bank', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725481577.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Under Armour</h3>
+					<h3 class="director-portfolio-work-item-caption-title">US Bank</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
@@ -123,50 +145,6 @@
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Delta</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/HuluTrailer.mp4?mrss=true', 'Hulu', 'Searching for Soul Food');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725493861.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Hulu</h3>
-					<p class="director-portfolio-work-item-caption-text">Searching for Soul Food</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Steppin--Teaser-Final-with-logo_mov.mp4?mrss=true', 'Steppin\' Teaser', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725493741.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Steppin' Teaser</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/XNPI-3974-60H_NFL_2022_CAUSE_WE-SEE-YOU_BROADCAST_60_mov.mp4?mrss=true', 'NFL', 'Superbowl');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725493695.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">NFL</h3>
-					<p class="director-portfolio-work-item-caption-text">Superbowl</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/SP21_CHI_WNBA_DDESHIELDS_060sec_1920x1080_re-deliver.mp4?mrss=true', 'WNBA', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1725493594.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">WNBA</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
@@ -446,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -568,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -581,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/sha-carri_richardson___nike_-waiting---Original---1-.mp4?mrss=true', 'Nike', 'Sha\'Carri Richardson'],['http://skinandbonesfilm.gosimian.com/assets/videos/63_60S_1080_Prores_mov.mp4?mrss=true', 'Nike', 'Chicago 63'],['https://skinandbonesfilm.gosimian.com/assets/videos/Ancestry-Commercial_mov.mp4?mrss=true', 'Ancestry', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/MARO_030C-16x9-mix.mp4?mrss=true', 'Under Armour', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/delta60DC_FINAL---h264.mp4?mrss=true', 'Delta', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/HuluTrailer.mp4?mrss=true', 'Hulu', 'Searching for Soul Food'],['https://skinandbonesfilm.gosimian.com/assets/videos/Steppin--Teaser-Final-with-logo_mov.mp4?mrss=true', 'Steppin\' Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/XNPI-3974-60H_NFL_2022_CAUSE_WE-SEE-YOU_BROADCAST_60_mov.mp4?mrss=true', 'NFL', 'Superbowl'],['https://skinandbonesfilm.gosimian.com/assets/videos/SP21_CHI_WNBA_DDESHIELDS_060sec_1920x1080_re-deliver.mp4?mrss=true', 'WNBA', ''],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/sha-carri_richardson___nike_-waiting---Original---1-.mp4?mrss=true', 'Nike', 'Sha\'Carri Richardson'],['https://skinandbonesfilm.gosimian.com/assets/videos/SP21_CHI_WNBA_DDESHIELDS_060sec_1920x1080_re-deliver.mp4?mrss=true', 'WNBA', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Popeyes--Big-Box-_mov.mp4?mrss=true', 'Popeyes', 'Big Box'],['http://skinandbonesfilm.gosimian.com/assets/videos/63_60S_1080_Prores_mov.mp4?mrss=true', 'Nike', 'Chicago 63'],['https://skinandbonesfilm.gosimian.com/assets/videos/Ancestry-Commercial_mov.mp4?mrss=true', 'Ancestry', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/RODNEY-US-BANK.mp4?mrss=true', 'US Bank', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/delta60DC_FINAL---h264.mp4?mrss=true', 'Delta', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
