--- a/directors/ruganzu-howard/index.html
+++ b/directors/ruganzu-howard/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Ruganzu Howard</h1>
-						<p>Before becoming a comedy director, Ruganzu “Riggs” Howard worked as an Executive Producer for some of the best and funniest advertising agencies in the world, like BBDO, TBWA, and Barton F. Graf and Translation. Prior to that, he was an assistant editor and post-producer. Prior, prior to that, Ruganzu was a Baltimore City Police Detective (no, really), where he served as a violent crimes investigator, hostage negotiator and police department spokesperson. Take all that experience and what do you get? An excellent collaborator with creative and client alike. And a sense of comedic timing and obsession with cinematic craft that always serve the script above all else.</p>
+						<p>Ruganzu “Riggs” Howard started on this road to the chair as an Executive Producer working agency-side for the likes of BBDO, TBWA, and Barton F. Graf. Prior to that, Riggs was a Baltimore City Police Detective (no, really), where he served as a violent crimes investigator and hostage negotiator. Try arguing that line-by-line budget now, hm? He’s been behind the lensing of Old Spice, Airheads, and has had his work recognized by the One Show.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -83,17 +83,6 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/PGOC4451000H-Old-Spice-MHST4-How-Could-You-TV-30-GENERIC_mov.mp4?mrss=true', 'OLD SPICE', 'How Could You');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1706802195.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">OLD SPICE</h3>
-					<p class="director-portfolio-work-item-caption-text">How Could You</p>
-				</figcaption>
-			</figure>
-		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Airheads-Piano-DC-35.mp4?mrss=true', 'Airheads', 'Piano');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1693939469.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -102,6 +91,17 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Airheads</h3>
 					<p class="director-portfolio-work-item-caption-text">Piano</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Airheads-Venus-Flytrap-DC.mp4?mrss=true', 'Airheads', 'Venus Flytrap');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1711475934.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Airheads</h3>
+					<p class="director-portfolio-work-item-caption-text">Venus Flytrap</p>
 				</figcaption>
 			</figure>
 		
@@ -116,36 +116,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Blue-Moon--Mini-Mini-Golf--DC.mp4?mrss=true', 'Blue Moon', 'Mini Mini Golf');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1681495505.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Little-Caesars-Volleyball-DC-30.mp4?mrss=true', 'Little Caesars', 'Volleyball');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1722450714.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Blue Moon</h3>
-					<p class="director-portfolio-work-item-caption-text">Mini Mini Golf</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Brach-s--Snap-.mp4?mrss=true', 'Brach\'s', 'Snap');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1681495474.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Brach's</h3>
-					<p class="director-portfolio-work-item-caption-text">Snap</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Zelle--Homework-Mitochondria-.mp4?mrss=true', 'Zelle', 'Homework Mitochondria');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1681495438.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Zelle</h3>
-					<p class="director-portfolio-work-item-caption-text">Homework Mitochondria</p>
+					<h3 class="director-portfolio-work-item-caption-title">Little Caesars</h3>
+					<p class="director-portfolio-work-item-caption-text">Volleyball</p>
 				</figcaption>
 			</figure>
 		
@@ -157,6 +135,17 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Benjamin Moore</h3>
 					<p class="director-portfolio-work-item-caption-text">Grow On Us</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Zelle--Homework-Mitochondria-.mp4?mrss=true', 'Zelle', 'Homework Mitochondria');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1681495438.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Zelle</h3>
+					<p class="director-portfolio-work-item-caption-text">Homework Mitochondria</p>
 				</figcaption>
 			</figure>
 		
@@ -435,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/VCF_DC.mp4?mrss=true', 'Value City Furniture', 'Furniture Regret'],['http://skinandbonesfilm.gosimian.com/assets/videos/PGOC4451000H-Old-Spice-MHST4-How-Could-You-TV-30-GENERIC_mov.mp4?mrss=true', 'OLD SPICE', 'How Could You'],['http://skinandbonesfilm.gosimian.com/assets/videos/Airheads-Piano-DC-35.mp4?mrss=true', 'Airheads', 'Piano'],['http://skinandbonesfilm.gosimian.com/assets/videos/Simply-Spiked--Juicy-Calls--DC.mp4?mrss=true', 'Simply Spiked', 'Juicy Calls'],['http://skinandbonesfilm.gosimian.com/assets/videos/Blue-Moon--Mini-Mini-Golf--DC.mp4?mrss=true', 'Blue Moon', 'Mini Mini Golf'],['http://skinandbonesfilm.gosimian.com/assets/videos/Brach-s--Snap-.mp4?mrss=true', 'Brach\'s', 'Snap'],['http://skinandbonesfilm.gosimian.com/assets/videos/Zelle--Homework-Mitochondria-.mp4?mrss=true', 'Zelle', 'Homework Mitochondria'],['http://skinandbonesfilm.gosimian.com/assets/videos/Benjamin-Moore--Grow-On-Us-.mp4?mrss=true', 'Benjamin Moore', 'Grow On Us'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/VCF_DC.mp4?mrss=true', 'Value City Furniture', 'Furniture Regret'],['http://skinandbonesfilm.gosimian.com/assets/videos/Airheads-Piano-DC-35.mp4?mrss=true', 'Airheads', 'Piano'],['http://skinandbonesfilm.gosimian.com/assets/videos/Airheads-Venus-Flytrap-DC.mp4?mrss=true', 'Airheads', 'Venus Flytrap'],['http://skinandbonesfilm.gosimian.com/assets/videos/Simply-Spiked--Juicy-Calls--DC.mp4?mrss=true', 'Simply Spiked', 'Juicy Calls'],['http://skinandbonesfilm.gosimian.com/assets/videos/Little-Caesars-Volleyball-DC-30.mp4?mrss=true', 'Little Caesars', 'Volleyball'],['http://skinandbonesfilm.gosimian.com/assets/videos/Benjamin-Moore--Grow-On-Us-.mp4?mrss=true', 'Benjamin Moore', 'Grow On Us'],['http://skinandbonesfilm.gosimian.com/assets/videos/Zelle--Homework-Mitochondria-.mp4?mrss=true', 'Zelle', 'Homework Mitochondria'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
