--- a/directors/shawn-zeytinoglu/index.html
+++ b/directors/shawn-zeytinoglu/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Shawn Zeytinoglu</h1>
-						<p>Shawn’s combination of curiosity and creativity creates work with a unique tone that sets itself apart. From his beginnings as a cinematographer, Shawn&#39;s eye for light and framing add a style to his comedic language that elevates his films. He is precise, focused and detailed in every aspect of each shot and holistic in how he brings it all together. Grounded in natural, engaging performances, each scene is anchored in reality even if set in a more heightened one. A dry sense of humour and quick wit, Shawn is great to work with and great to hang out with.</p>
+						<p>Shawn started as a cinematographer. This is rare. It gives him a technical understanding of the frame most directors need a cinematographer for. Throw in his penchant for comedic tone, and you’ve got something different. And in a world of people reviewing food items in their cars and GRWM videos, different is good. His signature stems from creating a heightened world whereby grounded, nuanced performances can play. He’s built these worlds for the likes of XBOX, TD Bank and Dell computers.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -127,25 +127,25 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Dell_Godmother_DIR_30HD.mp4?mrss=true', 'DELL', 'Fairy Godmother');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1713881203.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Trulia--Southern-Exposure-.mp4?mrss=true', 'Trulia', 'Southern Exposure');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1707340267.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">DELL</h3>
-					<p class="director-portfolio-work-item-caption-text">Fairy Godmother</p>
+					<h3 class="director-portfolio-work-item-caption-title">Trulia</h3>
+					<p class="director-portfolio-work-item-caption-text">Southern Exposure</p>
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Xbox--Digital-Age-.mp4?mrss=true', 'Xbox', 'Digital Age');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2023-09-05-at-30508-PM.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Mini-1.mp4?mrss=true', 'Mini', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1707340326.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Xbox</h3>
-					<p class="director-portfolio-work-item-caption-text">Digital Age</p>
+					<h3 class="director-portfolio-work-item-caption-title">Mini</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -424,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -546,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -559,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/GO-Transit--Carsick--30-DC.mp4?mrss=true', 'GO Transit', 'Carsick'],['http://skinandbonesfilm.gosimian.com/assets/videos/SCROLL-20_mov.mp4?mrss=true', 'Carvana', 'Scroll'],['http://skinandbonesfilm.gosimian.com/assets/videos/Earnest--Pier-One---------------.mp4?mrss=true', 'Earnest', 'Pier One'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bell_-Couples_yoga-.mp4?mrss=true', 'Bell', 'Couples Yoga'],['http://skinandbonesfilm.gosimian.com/assets/videos/TD_TransferFight_31DIR_HighRes.mp4?mrss=true', 'TD', 'Fight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Dell_Godmother_DIR_30HD.mp4?mrss=true', 'DELL', 'Fairy Godmother'],['http://skinandbonesfilm.gosimian.com/assets/videos/Xbox--Digital-Age-.mp4?mrss=true', 'Xbox', 'Digital Age'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/GO-Transit--Carsick--30-DC.mp4?mrss=true', 'GO Transit', 'Carsick'],['http://skinandbonesfilm.gosimian.com/assets/videos/SCROLL-20_mov.mp4?mrss=true', 'Carvana', 'Scroll'],['http://skinandbonesfilm.gosimian.com/assets/videos/Earnest--Pier-One---------------.mp4?mrss=true', 'Earnest', 'Pier One'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bell_-Couples_yoga-.mp4?mrss=true', 'Bell', 'Couples Yoga'],['http://skinandbonesfilm.gosimian.com/assets/videos/TD_TransferFight_31DIR_HighRes.mp4?mrss=true', 'TD', 'Fight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Trulia--Southern-Exposure-.mp4?mrss=true', 'Trulia', 'Southern Exposure'],['https://skinandbonesfilm.gosimian.com/assets/videos/Mini-1.mp4?mrss=true', 'Mini', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
