--- a/directors/kevin-castanheira/index.html
+++ b/directors/kevin-castanheira/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,54 +58,32 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Kevin Castanheira</h1>
-						<p>Kevin Castanheira is a dynamic director whose work bridges the worlds of art, fashion, and culture. Globally recognized and LA based, Kevin&#39;s work is highly visual with a key focus on story and style. He;s won several awards including Shots Ad of the Year, Webbys, and Boooooooom Best Doc of the year.</p>
+						<p>Kevin Castanheira is a dynamic director whose work bridges the worlds of art, fashion, and culture. Globally recognized and LA based, Kevin&#39;s work is highly visual with a key focus on story and style. He&#39;s won several awards including Shots Ad of the Year, Webbys, and Boooooooom Best Doc of the year..</p>
 
 						
 					</section>
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/gant_presents__a_new_york_love_story_-kind_of---1080p-.mp4?mrss=true', 'Gant', 'A New York Love Story (Kind Of)');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1742736071.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/McDs25_Employer-Image_Made-at-McD_s---Emily-_EN_40s_16x9.mp4?mrss=true', 'McDonalds', 'Made by Emily');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1753905007.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Gant</h3>
-					<p class="director-portfolio-work-item-caption-text">A New York Love Story (Kind Of)</p>
+					<h3 class="director-portfolio-work-item-caption-title">McDonalds</h3>
+					<p class="director-portfolio-work-item-caption-text">Made by Emily</p>
 				</figcaption>
 			</figure>
 		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/ka--rcher___bring_back_the_wow--1080p-1.mp4?mrss=true', 'Kärcher', 'Bring Back The Wow');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1744060103.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1749579740.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Kärcher</h3>
 					<p class="director-portfolio-work-item-caption-text">Bring Back The Wow</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/gant_holiday_2024_campaign--1080p-.mp4?mrss=true', 'Gant', 'Holiday 2024');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1742311991.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Gant</h3>
-					<p class="director-portfolio-work-item-caption-text">Holiday 2024</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/60_years_of_loud--1080p-1.mp4?mrss=true', 'Marshall', '60 years of loud');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1744060061.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Marshall</h3>
-					<p class="director-portfolio-work-item-caption-text">60 years of loud</p>
 				</figcaption>
 			</figure>
 		
@@ -120,14 +98,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/suki___what_makes_you--1080p-.mp4?mrss=true', 'Marshall', 'Suki');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1742311801.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Absolut-Vodka.mp4?mrss=true', 'Absolut Vodka X Sprite', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755893725.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Marshall</h3>
-					<p class="director-portfolio-work-item-caption-text">Suki</p>
+					<h3 class="director-portfolio-work-item-caption-title">Absolut Vodka X Sprite</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -142,14 +120,14 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/seb_murphy___its_good_to_reset--1080p-.mp4?mrss=true', 'Marshall', 'Seb Murphy');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1742312081.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/gant_holiday_2024_campaign--1080p-.mp4?mrss=true', 'Gant', 'Holiday 2024');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1742311991.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Marshall</h3>
-					<p class="director-portfolio-work-item-caption-text">Seb Murphy</p>
+					<h3 class="director-portfolio-work-item-caption-title">Gant</h3>
+					<p class="director-portfolio-work-item-caption-text">Holiday 2024</p>
 				</figcaption>
 			</figure>
 		
@@ -421,7 +399,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -543,7 +521,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -556,7 +534,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/gant_presents__a_new_york_love_story_-kind_of---1080p-.mp4?mrss=true', 'Gant', 'A New York Love Story (Kind Of)'],['http://skinandbonesfilm.gosimian.com/assets/videos/ka--rcher___bring_back_the_wow--1080p-1.mp4?mrss=true', 'Kärcher', 'Bring Back The Wow'],['http://skinandbonesfilm.gosimian.com/assets/videos/gant_holiday_2024_campaign--1080p-.mp4?mrss=true', 'Gant', 'Holiday 2024'],['http://skinandbonesfilm.gosimian.com/assets/videos/60_years_of_loud--1080p-1.mp4?mrss=true', 'Marshall', '60 years of loud'],['http://skinandbonesfilm.gosimian.com/assets/videos/sophi___my_body_is--1080p-.mp4?mrss=true', 'Marshall', 'Sophi / My Body Is'],['http://skinandbonesfilm.gosimian.com/assets/videos/suki___what_makes_you--1080p-.mp4?mrss=true', 'Marshall', 'Suki'],['http://skinandbonesfilm.gosimian.com/assets/videos/marshall___find_harmony_in_chaos--1080p-.mp4?mrss=true', 'Marshall', 'Find harmony in chaos'],['http://skinandbonesfilm.gosimian.com/assets/videos/seb_murphy___its_good_to_reset--1080p-.mp4?mrss=true', 'Marshall', 'Seb Murphy'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/McDs25_Employer-Image_Made-at-McD_s---Emily-_EN_40s_16x9.mp4?mrss=true', 'McDonalds', 'Made by Emily'],['http://skinandbonesfilm.gosimian.com/assets/videos/ka--rcher___bring_back_the_wow--1080p-1.mp4?mrss=true', 'Kärcher', 'Bring Back The Wow'],['http://skinandbonesfilm.gosimian.com/assets/videos/sophi___my_body_is--1080p-.mp4?mrss=true', 'Marshall', 'Sophi / My Body Is'],['https://skinandbonesfilm.gosimian.com/assets/videos/Absolut-Vodka.mp4?mrss=true', 'Absolut Vodka X Sprite', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/marshall___find_harmony_in_chaos--1080p-.mp4?mrss=true', 'Marshall', 'Find harmony in chaos'],['http://skinandbonesfilm.gosimian.com/assets/videos/gant_holiday_2024_campaign--1080p-.mp4?mrss=true', 'Gant', 'Holiday 2024'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
