--- a/directors/leo-zuckerman/index.html
+++ b/directors/leo-zuckerman/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,8 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Leo Zuckerman</h1>
-						<p>Leo is all about movement. Filming extreme sports with his brothers in Whistler is where he trained his eye to capture movement like a pro. Leo&#39;s ability to make the everyday seem epic is incredible, you can feel the energy in everything he does. With rich, contrasting visuals, his work is unmistakable. An award winning and technical director who geeks out on gear, rigs and drones, Leo is a high-powered visual storyteller with a style all his own.</p>
+						<p>Leo is a director’s director. A gifted eye, he can find a frame anywhere. His background as a photographer results in imagery that is arresting, emotive and thought provoking. </p>
+<p>From automotive to financial to athletics, he’s the guy you call when you need to put a helicopter on top of a mountain (or Tiger Woods on the putting green). Technically sound, with a firm grip on the language of light, he’s a visual storyteller that gets the audience to lean in. Every time.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -73,7 +74,7 @@
 					<section class="director-portfolio-work">
 						
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Qi35 Launch');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1747331995.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-No-Grain00_01_23_07Still002-copy.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -83,13 +84,13 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/TOYOTA.mp4?mrss=true', 'Toyota', 'Bring it to Life');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/TOYOTA.mp4?mrss=true', 'Toyota Olympics', 'Bring it to Life');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Frame.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Toyota</h3>
+					<h3 class="director-portfolio-work-item-caption-title">Toyota Olympics</h3>
 					<p class="director-portfolio-work-item-caption-text">Bring it to Life</p>
 				</figcaption>
 			</figure>
@@ -105,8 +106,19 @@
 				</figcaption>
 			</figure>
 		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/InterMountain-Health-The-Power-of-We.mp4?mrss=true', 'InterMountain Health', 'The Power of We');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-06-11-at-125231---PM.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">InterMountain Health</h3>
+					<p class="director-portfolio-work-item-caption-text">The Power of We</p>
+				</figcaption>
+			</figure>
+		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai-Fresh-Tracks.mp4?mrss=true', 'Hyundai', 'Fresh Tracks');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-12-12-at-12103-PM.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-06-11-at-123304---PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -128,7 +140,7 @@
 			</figure>
 		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Interac---In-Life-60.mp4?mrss=true', 'Interac', 'Van Life');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-12-12-at-14703-PM.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-06-11-at-12501---PM-copy.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -139,7 +151,7 @@
 			</figure>
 		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Lexus--Letters--.mp4?mrss=true', 'Lexus', 'Letters');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-12-12-at-11801-PM.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-06-11-at-124754---PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -435,7 +447,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -557,7 +569,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -570,7 +582,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Qi35 Launch'],['http://skinandbonesfilm.gosimian.com/assets/videos/TOYOTA.mp4?mrss=true', 'Toyota', 'Bring it to Life'],['https://skinandbonesfilm.gosimian.com/assets/videos/Teaser_Shortened.mp4?mrss=true', 'The Ways I Punish Myself Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai-Fresh-Tracks.mp4?mrss=true', 'Hyundai', 'Fresh Tracks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Nissan.mp4?mrss=true', 'Nissan', 'The Night'],['http://skinandbonesfilm.gosimian.com/assets/videos/Interac---In-Life-60.mp4?mrss=true', 'Interac', 'Van Life'],['http://skinandbonesfilm.gosimian.com/assets/videos/Lexus--Letters--.mp4?mrss=true', 'Lexus', 'Letters'],['http://skinandbonesfilm.gosimian.com/assets/videos/Toyota---Fun-to-Drive----DC-ProRes1.mp4?mrss=true', 'Toyota', 'Fun to Drive'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Qi35 Launch'],['http://skinandbonesfilm.gosimian.com/assets/videos/TOYOTA.mp4?mrss=true', 'Toyota Olympics', 'Bring it to Life'],['https://skinandbonesfilm.gosimian.com/assets/videos/Teaser_Shortened.mp4?mrss=true', 'The Ways I Punish Myself Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/InterMountain-Health-The-Power-of-We.mp4?mrss=true', 'InterMountain Health', 'The Power of We'],['http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai-Fresh-Tracks.mp4?mrss=true', 'Hyundai', 'Fresh Tracks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Nissan.mp4?mrss=true', 'Nissan', 'The Night'],['http://skinandbonesfilm.gosimian.com/assets/videos/Interac---In-Life-60.mp4?mrss=true', 'Interac', 'Van Life'],['http://skinandbonesfilm.gosimian.com/assets/videos/Lexus--Letters--.mp4?mrss=true', 'Lexus', 'Letters'],['http://skinandbonesfilm.gosimian.com/assets/videos/Toyota---Fun-to-Drive----DC-ProRes1.mp4?mrss=true', 'Toyota', 'Fun to Drive'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
