--- a/directors/sebastian-hill-esbrand/index.html
+++ b/directors/sebastian-hill-esbrand/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/james-lawes">James Lawes</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Sebastian Hill-Esbrand</h1>
-						<p>Sebastian is a director of Caribbean and Australian heritage. His international upbringing taught Sebastian the power in diversity, as well as the importance of having intersectionality displayed on screen. His experience is threaded into the DNA of his work. Bringing outsiders and unexpected characters to the front of the frame and making them shine. His latest film ‘Family’ won the Gold Lion in the Young Director Award in Cannes.</p>
+						<p>Sebastian hails from Australia where he cut his teeth making short films and music videos. He takes an inherently artistic approach to his work - vibrant colour palettes, dynamic camera language, and standout casting, he does not go with the expected choice, and it shows. His work has been recognized by Young Guns, SHOTS and the 1.4 Awards. His latest, ‘Family’ just took home the Gold Lion in the Young Director category in Cannes.</p>
 
 						
 				<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
@@ -72,28 +72,6 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/420---Selfcare-_PRORES_mov.mp4?mrss=true', '4/20', 'Self-care');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1745246415.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">4/20</h3>
-					<p class="director-portfolio-work-item-caption-text">Self-care</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/3-DoritosVMA-Spot3-CC2.mp4?mrss=true', 'Doritos', 'VMA');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1726163274.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Doritos</h3>
-					<p class="director-portfolio-work-item-caption-text">VMA</p>
-				</figcaption>
-			</figure>
-		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/ambr___true_colors--1080p-.mp4?mrss=true', 'Ambr', 'True Colours');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-05-14-at-35225-PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -102,17 +80,6 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Ambr</h3>
 					<p class="director-portfolio-work-item-caption-text">True Colours</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/4x3_TENNIS_MSTR_PRORES_mov.mp4?mrss=true', '4/20', 'Tennis');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1746730512.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">4/20</h3>
-					<p class="director-portfolio-work-item-caption-text">Tennis</p>
 				</figcaption>
 			</figure>
 		
@@ -146,6 +113,39 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">TMU</h3>
 					<p class="director-portfolio-work-item-caption-text">Grit</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/TELUS_BURSARY_DIRCUT_MASTER_WebSpecMP4.mp4?mrss=true', 'Telus', 'Better Than Imagined');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1733776936.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Telus</h3>
+					<p class="director-portfolio-work-item-caption-text">Better Than Imagined</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Living-On_45-V2_mov.mp4?mrss=true', 'Living On Family Trailer', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1757623953.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Living On Family Trailer</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/PIVOT_MSTR_3.mp4?mrss=true', 'Pivot', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1755294524.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Pivot</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -424,7 +424,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			<p>[04.03.2025]</p>
 			<br>
 			<p>
-				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>.</p>
+				<p>Rodney Lucas knows a thing or two about good work. New stuff coming soon. See <a href="https://www.instagram.com/p/DH_uf02Sqk-/?img_index=1">here</a>..</p>
 
 			</p>
 		</section>
@@ -546,7 +546,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 		</div>
 	
 		<div class="contact-block contact-block-address">
-			<p>1028 Queen St. W. #200<br>Toronto, ON M6J 1H6, Canada</p>
+			<p>50 Carroll St. Lower Unit<br>Toronto, ON M4M 3G3, Canada</p>
 
 		</div>
 		<div class="contact-block contact-block-social">
@@ -559,7 +559,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/420---Selfcare-_PRORES_mov.mp4?mrss=true', '4/20', 'Self-care'],['http://skinandbonesfilm.gosimian.com/assets/videos/3-DoritosVMA-Spot3-CC2.mp4?mrss=true', 'Doritos', 'VMA'],['http://skinandbonesfilm.gosimian.com/assets/videos/ambr___true_colors--1080p-.mp4?mrss=true', 'Ambr', 'True Colours'],['http://skinandbonesfilm.gosimian.com/assets/videos/4x3_TENNIS_MSTR_PRORES_mov.mp4?mrss=true', '4/20', 'Tennis'],['https://skinandbonesfilm.gosimian.com/assets/videos/Lifesaving-Society-30.mp4?mrss=true', 'Lifesaving Society', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/Funhouse_30.mp4?mrss=true', 'Toronto Funhouse', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/TMU--Grit--DC.mp4?mrss=true', 'TMU', 'Grit'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/ambr___true_colors--1080p-.mp4?mrss=true', 'Ambr', 'True Colours'],['https://skinandbonesfilm.gosimian.com/assets/videos/Lifesaving-Society-30.mp4?mrss=true', 'Lifesaving Society', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/Funhouse_30.mp4?mrss=true', 'Toronto Funhouse', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/TMU--Grit--DC.mp4?mrss=true', 'TMU', 'Grit'],['http://skinandbonesfilm.gosimian.com/assets/videos/TELUS_BURSARY_DIRCUT_MASTER_WebSpecMP4.mp4?mrss=true', 'Telus', 'Better Than Imagined'],['https://skinandbonesfilm.gosimian.com/assets/videos/Living-On_45-V2_mov.mp4?mrss=true', 'Living On Family Trailer', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/PIVOT_MSTR_3.mp4?mrss=true', 'Pivot', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
